--- a/styles.css
+++ b/styles.css
@@ -200,6 +200,83 @@ margin-right: 30px;
                     .secondtwo{
                         margin: right 80px;
                         margin-top: 20px;
-}
-            
+                                            }
+                                            
+   .beforecities{
+    margin-left: 37%;
+    margin-right: 37%;
+       display: flex;
+       flex-direction: column;
        
+
+   }                                         
+                                            
+                                            
+.section5 {
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: 20%;
+    margin-right: 20%;
+}
+.photo{
+    margin-right:20px ;
+    margin-top: 20px;
+    border-radius:6px;
+    border: 1px solid rgba(0,0,0,.03);
+ 
+}
+.bas {
+    display: flex;
+    justify-content: space-between;
+    
+}
+     
+.bas button {
+    font-size: .625rem;
+    padding: 1em 1.5em;
+    height: 30px;
+    width: 100px;
+    margin-top: 10px;
+    margin-right: 17px;
+    background-color: #3d83df;
+    border-color: #3d83df;
+    border-radius: 4px;
+    color: white;
+}
+.bas p {
+    margin-left: 10px;
+}
+.section6 {
+    margin-left: 25%;
+    margin-right: 25%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 80px;
+    }
+    .section6 button {
+        display: inline-block;
+        vertical-align: middle;
+        position: relative;
+        outline: 0;
+        border: 0;
+        border-radius: 4px;
+        padding: 1.1666666667em 1.5em;
+        background: #3d83df;
+        font-family: Roboto,Arial,sans-serif;
+        line-height: 1em;
+        color: #fff;
+        font-weight: 700;
+        letter-spacing: .04em;
+        font-size: .75rem;
+}
+.section7
+{
+    border-top: 1px solid #eef2f2;
+    margin-top: 80px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+    
